--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -6,5 +6,8 @@
 <body>
 <p>Name: <%= @post.name %></p>
 <p>Content: <%= @post.content %></p>
+<form method="post" action ="/posts/<%= @post.id %>/delete">
+<input id="hidden" type="hidden" name="_method" value="delete">
+<input type=submit value="delete" id="delete">
 </body>
 </html>
