--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -4,7 +4,7 @@
   <title></title>
 </head>
 <body>
-<form method="post" action="/posts/<%= @post.id %>/edit">
+<form method="post" action="/posts/<%= @post.id %>">
 <input type="text" name="name" id="name" value=<%= @post.name %>>
 <input type="text" name="content" id="content" value=<%= @post.content %>>
 <input id="hidden" type="hidden" name="_method" value="patch">
